# clawguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  pyproject.toml
config/: default_policy.yaml
openclaw-integration/clawguard-plugin/: index.ts  openclaw.plugin.json  package-lock.json  package.json
openclaw-integration/clawguard-skill/: SKILL.md
openclaw-integration/clawguard-skill/.clawhub/: origin.json
openclaw-integration/clawguard-skill/plugin/: package.json
src/clawguard/: __init__.py  __main__.py  app.py  config.py  default_policy.yaml  dependencies.py
src/clawguard/api/: audit.py  dashboard_api.py  health.py  policy.py  router.py  scan.py
src/clawguard/dashboard/: __init__.py  index.html
src/clawguard/db/: audit_repository.py  models.py  repository.py  session.py
src/clawguard/engine/: action_handler.py  policy_engine.py  redactor.py
src/clawguard/models/: audit.py  dashboard.py  enums.py  policy.py  scan.py
src/clawguard/scanners/: base.py  custom_scanner.py  pii_scanner.py  registry.py  secret_scanner.py
src/clawguard/scanners/patterns/: pii.py  secrets.py
src/clawguard/utils/: entropy.py  hashing.py
tests/: conftest.py
tests/test_api/: test_audit.py  test_dashboard.py  test_health.py  test_scan.py
tests/test_db/: test_audit_repository.py
tests/test_engine/: test_action_handler.py  test_policy_engine.py  test_redactor.py
tests/test_scanners/: test_custom_scanner.py  test_pii_scanner.py  test_secret_scanner.py
