[project]
name = "clawguard"
version = "0.2.0"
description = "DLP Surveillance Layer for OpenClaw — scans outbound content for secrets, PII, and policy violations"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.109.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.25,<3.0",
    "aiosqlite>=0.19.0,<1.0",
    "pydantic>=2.5.0,<3.0",
    "pydantic-settings>=2.1.0,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "httpx>=0.26.0,<1.0",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0,<9.0"
pytest-asyncio = ">=0.23.0,<1.0"
httpx = ">=0.26.0,<1.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "clawguard", from = "src"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
